Villanova_Dev1/src/objects/VEM_Event_Resource__c.object
<CustomObject>
    <description>Junction object for many-to-many relationship between Villanova events and resources</description>
    <fields>
        <fullName>Events__c</fullName>
        <inlineHelpText>Select event to link to resource</inlineHelpText>
        <label>Event</label>
        <referenceTo>VEM_Event__c</referenceTo>
        <relationshipName>Resource_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Enter the number of the resource required</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <inlineHelpText>Select resource to link to event</inlineHelpText>
        <label>Resource</label>
        <referenceTo>VEM_Resource__c</referenceTo>
        <relationshipName>Event_Resources</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Event Resource</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Event Resource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quantity_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Value must be a positive number</errorMessage>
    </validationRules>
</CustomObject>